@@ -1,3 +1,5 @@
+- STARKA-323 refactor STARKA-293 to allow reuse of general accelerated binom
+test
 - STARKA-297 adjust somatic ES model for exome data
 - STARKA-293 remove count and frequency cutoffs for non-STR indels, replace with statistical test
 - STARKA-305 add simple germline SNV calling site simulator
